2012-05-03      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  (BinaryOperands) New procedure function.
	  Used by FoldAdd, CodeAdd, FoldSub, CodeSub, FoldMult, CodeMult,
	  FoldDivTrunc, CodeDivTrunc, FoldModFloor, CodeModFloor.

2012-05-02      Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  (convert_for_comparison) New function.
	  gccgm2_BuildEqualTo, gccgm2_BuildNotEqualTo use
	  convert_for_comparison.  This fixes comparison between a
	  WORD operand.  Bug reported by Scott Iverson.
	* gm2/gccgm2.c:  applied fix for all WORD sizes.

2012-05-01      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  (CodeStandardFunction) implement
	  TBITSIZE.  (FoldStandardFunction) implement TBITSIZE.
	* gm2/gm2-compiler/M2Quads.mod:  (BuildTBitSizeFunction) New
	  procedure function.
	* gm2/gm2-compiler/M2System.def:  (TBitSize) define and export.
	  Tidied up formatting (sym used instead of Sym).
	* gm2/gm2-compiler/M2System.mod:  initialise TBitSize.
	  Tidied up formatting (sym used instead of Sym).
	  (IsPseudoSystemFunction) includes TBitSize.

2012-04-30      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  (BuildRecord) fixed bit
	  field calculation.

2012-04-28      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Range.mod:  (firstmention) New field
	  in Range.  (FirstMention) New procedure function.
	  FoldTypeAssign, FoldTypeParam, FoldTypeExpr, CodeTypeAssign,
          CodeTypeParam, CodeTypeExpr call FirstMention before
	  emitting an error message.  Multiple related messages have
	  been chained.  This fixes a bug report by Scott Iverson
	  (duplicate error messages).
	* gm2/Make-lang.in:  tidied up formatting and added a commented
	  out short cut used during development.
	* gm2/gccgm2.c:  tidied up formatting of gccgm2_GetSizeOf.
	  gccgm2_GetSizeOf now detects COMPONENT_REF.
	  gccgm2_GetSizeOfInBits now detects COMPONENT_REF.
	* gm2/gm2.texi:  added new example of how bit field packing